# face-reidentification

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: pretrained.py
face_reidentification/: __init__.py
face_reidentification/fine_tuned/: __init__.py  densenet.py  googlenet.py  process.py  resnet.py  squeezenet.py  train.py  vgg.py
face_reidentification/pretrained/: __init__.py  distance.py  encoders.py  verification.py
face_reidentification/utils/: __init__.py  dataset.py
notebooks/: example_usage.ipynb  tensofboard.ipynb
notebooks/.ipynb_checkpoints/: calculate_distance-checkpoint.ipynb
